style: improve code formatting and indentation in templates
- Fix inconsistent indentation in HTML templates
- Remove extra whitespace in Python files
- Improve line breaks for better readability

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,44 +1,46 @@
 <!-- Footer -->
 <footer class="border-top mt-5 py-4 bg-light">
-  <div class="container px-4 px-lg-5 text-center">
-    <ul class="list-inline mb-3 d-flex justify-content-center flex-wrap">
-      <li class="list-inline-item mx-2 my-1">
-        <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">
+    <div class="container px-4 px-lg-5 text-center">
+        <ul class="list-inline mb-3 d-flex justify-content-center flex-wrap">
+            <li class="list-inline-item mx-2 my-1">
+                <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">
           <span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
           </span>
-        </a>
-      </li>
-      <li class="list-inline-item mx-2 my-1">
-        <a href="https://www.instagram.com/mudasirabbas0/" target="_blank" class="text-decoration-none text-dark">
+                </a>
+            </li>
+            <li class="list-inline-item mx-2 my-1">
+                <a href="https://www.instagram.com/mudasirabbas0/" target="_blank"
+                   class="text-decoration-none text-dark">
           <span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
           </span>
-        </a>
-      </li>
-      <li class="list-inline-item mx-2 my-1">
-        <a href="https://www.facebook.com/profile.php?id=61566127081692" target="_blank" class="text-decoration-none text-dark">
+                </a>
+            </li>
+            <li class="list-inline-item mx-2 my-1">
+                <a href="https://www.facebook.com/profile.php?id=61566127081692" target="_blank"
+                   class="text-decoration-none text-dark">
           <span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
           </span>
-        </a>
-      </li>
-      <li class="list-inline-item mx-2 my-1">
-        <a href="https://github.com/mjeyz" target="_blank" class="text-decoration-none text-dark">
+                </a>
+            </li>
+            <li class="list-inline-item mx-2 my-1">
+                <a href="https://github.com/mjeyz" target="_blank" class="text-decoration-none text-dark">
           <span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-github fa-stack-1x fa-inverse"></i>
           </span>
-        </a>
-      </li>
-    </ul>
-    <div class="small text-muted fst-italic">
-      Copyright &copy; Blog <span id="currentYear"></span>
+                </a>
+            </li>
+        </ul>
+        <div class="small text-muted fst-italic">
+            Copyright &copy; Blog <span id="currentYear"></span>
+        </div>
     </div>
-  </div>
 </footer>
 
 <!-- Bootstrap core JS -->
@@ -46,7 +48,6 @@
 
 <!-- Core theme JS -->
 <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-
 
 
 <script>
