--- a/templates/upload_profile_pic.html
+++ b/templates/upload_profile_pic.html
@@ -43,10 +43,12 @@
                            onchange="handleFileSelect(event)">
 
                     <div class="mb-4">
-                        <label for="picture" class="form-label fw-semibold d-block mb-3">Choose a New Profile Photo</label>
+                        <label for="picture" class="form-label fw-semibold d-block mb-3">Choose a New Profile
+                            Photo</label>
 
                         <div class="d-flex flex-column gap-3">
-                            <button type="button" class="btn btn-outline-primary rounded-3 p-3 d-flex align-items-center justify-content-center"
+                            <button type="button"
+                                    class="btn btn-outline-primary rounded-3 p-3 d-flex align-items-center justify-content-center"
                                     onclick="document.getElementById('picture').click()">
                                 <div class="text-start">
                                     <i class="bi bi-laptop display-6 d-block mb-2"></i>
@@ -55,7 +57,8 @@
                                 </div>
                             </button>
 
-                            <button type="button" class="btn btn-outline-success rounded-3 p-3 d-flex align-items-center justify-content-center"
+                            <button type="button"
+                                    class="btn btn-outline-success rounded-3 p-3 d-flex align-items-center justify-content-center"
                                     onclick="document.getElementById('picture').click()">
                                 <div class="text-start">
                                     <i class="bi bi-phone display-6 d-block mb-2"></i>
