--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -33,7 +33,7 @@
                                 {{ form.first_name.label(class="form-label fw-bold") }}
                                 {{ form.first_name(class="form-control", placeholder="Enter your First Name") }}
                                 {% for error in form.first_name.errors %}
-                                    <div class="text-danger small">{{ error }}</div>
+                                <div class="text-danger small">{{ error }}</div>
                                 {% endfor %}
                             </div>
 
@@ -41,7 +41,7 @@
                                 {{ form.last_name.label(class="form-label fw-bold") }}
                                 {{ form.last_name(class="form-control", placeholder="Enter your Last Name") }}
                                 {% for error in form.last_name.errors %}
-                                    <div class="text-danger small">{{ error }}</div>
+                                <div class="text-danger small">{{ error }}</div>
                                 {% endfor %}
                             </div>
 
@@ -49,7 +49,7 @@
                                 {{ form.username.label(class="form-label fw-bold") }}
                                 {{ form.username(class="form-control", placeholder="Choose a Username") }}
                                 {% for error in form.username.errors %}
-                                    <div class="text-danger small">{{ error }}</div>
+                                <div class="text-danger small">{{ error }}</div>
                                 {% endfor %}
                             </div>
 
@@ -57,64 +57,67 @@
                                 {{ form.email.label(class="form-label fw-bold") }}
                                 {{ form.email(class="form-control", placeholder="Enter your Email Address") }}
                                 {% for error in form.email.errors %}
-                                    <div class="text-danger small">{{ error }}</div>
+                                <div class="text-danger small">{{ error }}</div>
                                 {% endfor %}
                             </div>
                         </div>
 
-                        <div class="mb-3">
-                            {{ form.location.label(class="form-label fw-bold") }}
-                            {{ form.location(class="form-control", placeholder="Enter your Location") }}
-                            {% for error in form.location.errors %}
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                {{ form.location.label(class="form-label fw-bold") }}
+                                {{ form.location(class="form-control", placeholder="Enter your Location") }}
+                                {% for error in form.location.errors %}
                                 <div class="text-danger small">{{ error }}</div>
-                            {% endfor %}
-                        </div>
+                                {% endfor %}
+                            </div>
 
-                        <div class="mb-3">
-                            {{ form.occupation.label(class="form-label fw-bold") }}
-                            {{ form.occupation(class="form-control", placeholder="Your job or profession") }}
-                            {% for error in form.occupation.errors %}
+                            <div class="col-md-6 mb-3">
+                                {{ form.occupation.label(class="form-label fw-bold") }}
+                                {{ form.occupation(class="form-control", placeholder="Your job or profession") }}
+                                {% for error in form.occupation.errors %}
                                 <div class="text-danger small">{{ error }}</div>
-                            {% endfor %}
-                        </div>
+                                {% endfor %}
+                            </div>
 
-                        <div class="mb-3">
-                            {{ form.education.label(class="form-label fw-bold") }}
-                            {{ form.education(class="form-control", placeholder="Your school, college, or university") }}
-                            {% for error in form.education.errors %}
+                            <div class="mb-3">
+                                {{ form.education.label(class="form-label fw-bold") }}
+                                {{ form.education(class="form-control", placeholder="Your school, college, or
+                                university") }}
+                                {% for error in form.education.errors %}
                                 <div class="text-danger small">{{ error }}</div>
-                            {% endfor %}
-                        </div>
+                                {% endfor %}
+                            </div>
 
-                        <div class="mb-3">
-                            {{ form.skill.label(class="form-label fw-bold") }}
-                            {{ form.skill(class="form-control", placeholder="e.g. Python, Flask, SQL") }}
-                            {% for error in form.skill.errors %}
+                            <div class="col-md-6 mb-3">
+                                {{ form.skill.label(class="form-label fw-bold") }}
+                                {{ form.skill(class="form-control", placeholder="e.g. Python, Flask, SQL") }}
+                                {% for error in form.skill.errors %}
                                 <div class="text-danger small">{{ error }}</div>
-                            {% endfor %}
-                        </div>
+                                {% endfor %}
+                            </div>
 
-                        <div class="col-md-6 mb-3">
+                            <div class="col-md-6 mb-3">
                                 {{ form.profession.label(class="form-label fw-bold") }}
                                 {{ form.profession(class="form-control", placeholder="Enter your profession") }}
                                 {% for error in form.profession.errors %}
-                                    <div class="text-danger small">{{ error }}</div>
+                                <div class="text-danger small">{{ error }}</div>
                                 {% endfor %}
+                            </div>
                         </div>
 
-                         <div class="col-md-6 mb-3">
-                                {{ form.experience.label(class="form-label fw-bold") }}
-                                {{ form.experience(class="form-control", placeholder="Enter your experience") }}
-                                {% for error in form.experience.errors %}
-                                    <div class="text-danger small">{{ error }}</div>
-                                {% endfor %}
+                        <div class=" mb-3">
+                            {{ form.experience.label(class="form-label fw-bold") }}
+                            {{ form.experience(class="form-control", placeholder="Enter your experience") }}
+                            {% for error in form.experience.errors %}
+                            <div class="text-danger small">{{ error }}</div>
+                            {% endfor %}
                         </div>
 
                         <div class="mb-3">
                             {{ form.bio.label(class="form-label fw-bold") }}
                             {{ form.bio(class="form-control", placeholder="Write something about yourself") }}
                             {% for error in form.bio.errors %}
-                                <div class="text-danger small">{{ error }}</div>
+                            <div class="text-danger small">{{ error }}</div>
                             {% endfor %}
                         </div>
 
@@ -124,7 +127,7 @@
                             {{ form.website.label(class="form-label fw-bold") }}
                             {{ form.website(class="form-control", placeholder="Your website or portfolio URL") }}
                             {% for error in form.website.errors %}
-                                <div class="text-danger small">{{ error }}</div>
+                            <div class="text-danger small">{{ error }}</div>
                             {% endfor %}
                         </div>
 
@@ -142,12 +145,12 @@
                                 {{ form.twitter(class="form-control", placeholder="Twitter Profile URL") }}
                             </div>
 
-                             <div class="col-md-6 mb-3">
+                            <div class="col-md-6 mb-3">
                                 {{ form.facebook.label(class="form-label fw-bold") }}
                                 {{ form.facebook(class="form-control", placeholder="Facebook Profile URL") }}
                             </div>
 
-                            <div class="col-md-6 mb-3">
+                            <div class="mb-3">
                                 {{ form.instagram.label(class="form-label fw-bold") }}
                                 {{ form.instagram(class="form-control", placeholder="Instagram Profile URL") }}
                             </div>
