--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -20,62 +20,10 @@
                     {% endif %}
                 {% endwith %}
 
-                <form method="POST" novalidate>
-                    {{ form.hidden_tag() }}
+                <div class="mt-4">
+                    {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+                </div>
 
-                    <!-- Old Password -->
-                    <div class="mb-3 position-relative">
-                        {{ form.current_password.label(class="form-label") }}
-                        <div class="input-group">
-                            {{ form.current_password(class="form-control", id="current_password") }}
-                        </div>
-                        {% if form.current_password.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in form.current_password.errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                    </div>
-
-                    <!-- New Password -->
-                    <div class="mb-3 position-relative">
-                        {{ form.new_password.label(class="form-label") }}
-                        <div class="input-group">
-                            {{ form.new_password(class="form-control", id="new_password") }}
-                            <button type="button" class="btn btn-outline-secondary password-toggle" data-target="new_password" aria-label="Toggle password visibility">
-                                <i class="fa-solid fa-eye"></i>
-                            </button>
-                        </div>
-                        {% if form.new_password.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in form.new_password.errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                    </div>
-
-                    <!-- Confirm Password -->
-                    <div class="mb-3 position-relative">
-                        {{ form.confirm_password.label(class="form-label") }}
-                        <div class="input-group">
-                            {{ form.confirm_password(class="form-control", id="confirm_password") }}
-                            <button type="button" class="btn btn-outline-secondary password-toggle" data-target="confirm_password" aria-label="Toggle password visibility">
-                                <i class="fa-solid fa-eye"></i>
-                            </button>
-                        </div>
-                        {% if form.confirm_password.errors %}
-                            <div class="invalid-feedback d-block">
-                                {% for error in form.confirm_password.errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                    </div>
-
-                    <button class="btn btn-primary w-100 mt-3" type="submit">Update Password</button>
-                </form>
             </div>
         </div>
     </div>
