--- a/templates/profile.html
+++ b/templates/profile.html
@@ -233,7 +233,7 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <i class="bi bi-calendar me-2"></i>
-                            Joined {{ user[9] if user|length > 9 else 'Recently' }}
+                            Joined {{ current_user.joined_date .strftime('%B %Y') if current_user.id == user[0] else user_info[12].strftime('%B %Y') }}
                         </div>
                     </div>
                 </div>
