fix(login): improve password toggle functionality and cleanup js
- Rewrote password toggle implementation to be more reliable
- Removed redundant comments and simplified code structure
- Added script reference to login template

--- a/templates/login.html
+++ b/templates/login.html
@@ -43,7 +43,7 @@
 
                 <!-- Login Form -->
                 <div class="mt-4">
-                    {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+{{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
                 </div>
 
             </div>
@@ -52,4 +52,5 @@
 </main>
 
 {% include "footer.html" %}
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 {% endblock %}
