--- a/templates/profile.html
+++ b/templates/profile.html
@@ -240,8 +240,7 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <i class="bi bi-calendar me-2"></i>
-                            Joined {{ current_user.joined_date .strftime('%B %Y') if current_user.id == user[0] else
-                            user_info[12].strftime('%B %Y') }}
+                            Joined {{ current_user.joined_date .strftime('%B %Y') }}
                         </div>
                     </div>
                 </div>
