--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
 
     {% block styles %}
     {{ bootstrap.load_css() }}
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon-2.jpg') }}"/>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
