--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,10 +57,9 @@ body {
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
-  background-color: var(--bs-body-bg);
-  -webkit-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background: linear-gradient(to bottom right, #f8f9fb, #e9ecef);
+    background: var(--bs-body-bg) linear-gradient(to bottom right, #f8f9fb, #e9ecef);
 }
 
 /* ===== HEADER / MASTHEAD STYLES ===== */
